--- a/src/Main.css
+++ b/src/Main.css
@@ -4,6 +4,7 @@
     overflow: auto;
     border: 1px solid #989898;
     padding: 10px;
+    margin-bottom: 10px;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -35,8 +36,15 @@
     color: #212529;
     border-color: #212529;
 }
+.fs-100 {
+  font-size: 120%;
+  margin: 0.5rem;
+  width: 100px;
+}
+
 .fs-200 {
     font-size: 200%;
+    margin-bottom: 2rem;
 }
 .fs-400 {
     font-size: 600%;
@@ -46,7 +54,7 @@
 .f{
     display: flex;
     align-items: center;
-    margin-left: 2em;
+    margin-left: 5.5em;
 }
 .f-m{
     display: flex;
@@ -184,6 +192,7 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  font-family: "nanum";
 }
 
 hr {
@@ -206,6 +215,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 }
 
 h1, .h1 {
+  font-family: "nanumebd";
   font-size: calc(1.375rem + 1.5vw);
 }
 @media (min-width: 1200px) {
@@ -645,13 +655,13 @@ progress {
 }
 
 .display-6 {
-  font-size: calc(1.375rem + 1.5vw);
-  font-weight: 300;
+  font-size: calc(1rem + 1.2vw);
+  font-weight: 100;
   line-height: 1.2;
 }
 @media (min-width: 1200px) {
   .display-6 {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 }
 
@@ -7592,8 +7602,8 @@ textarea.form-control-lg {
 }
 
 .py-5 {
-  padding-top: 3rem !important;
-  padding-bottom: 3rem !important;
+  padding-top: 2.2rem !important;
+  padding-bottom: 2rem !important;
 }
 
 .pt-0 {
@@ -7729,7 +7739,7 @@ textarea.form-control-lg {
 }
 
 .fw-light {
-  font-weight: 300 !important;
+  font-weight: 100 !important;
 }
 
 .fw-lighter {
@@ -7741,11 +7751,11 @@ textarea.form-control-lg {
 }
 
 .fw-bold {
-  font-weight: 700 !important;
+  font-weight: 600 !important;
 }
 
 .fw-bolder {
-  font-weight: bolder !important;
+  font-weight: 700 !important;
 }
 
 .lh-1 {
@@ -11386,4 +11396,24 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+}
+
+@font-face{
+  font-family: "dalseo";
+  src: url("./fonts/DalseoDarling.otf");
+}
+
+@font-face{
+  font-family: "nanum";
+  src: url("./fonts/NanumGothic.otf");
+}
+
+@font-face{
+font-family: "nanumbd";
+src: url("./fonts/NanumGothicBold.otf");
+}
+
+@font-face{
+font-family: "nanumebd";
+src: url("./fonts/NanumGothicExtraBold.otf");
 }
